force-app/main/default/objects/EventOrgainizer__c/EventOrgainizer__c.object-meta.xml
<CustomObject>
    <label>Event Organizer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>