force-app/main/default/objects/EventOrgainizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <label>. Alternative Email</label>
    <type>Email</type>
</CustomField>