force-app/main/default/objects/EventOrgainizer__c/fields/Location_Addressbook__c.field-meta.xml
<CustomField>
    <fullName>Location_Addressbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location(Addressbook)</label>
    <referenceTo>LocationAddressbook__c</referenceTo>
    <relationshipLabel>Event Organizers</relationshipLabel>
    <relationshipName>Event_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>